--- a/vercel.json
+++ b/vercel.json
@@ -16,19 +16,7 @@
   ],
   "routes": [
     {
-      "src": "/bootstrap/(.*)",
-      "dest": "/public/bootstrap/$1"
-    },
-    {
-      "src": "/dist/(.*)",
-      "dest": "/public/dist/$1"
-    },
-    {
-      "src": "/(.*\.html)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/",
+      "src": "/(.*)",
       "dest": "/login.php.html"
     },
     {
