--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "University of Malawi Students Portal",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Building...'"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "pg": "^8.11.3",
     "bcryptjs": "^2.4.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
